Formatando as imagens e menu criado

--- a/ex001/monstros.html
+++ b/ex001/monstros.html
@@ -110,7 +110,7 @@
             <a href="../paginas_monstros/gendrome.html" target="_blank"><img src="../imagens/Gendrome_Icon.png" alt="Gendrome_Icon"><p>Gendrome</p></a><hr>
             <a href="../paginas_monstros/giadrome.html" target="_blank"><img src="../imagens/MHFU-Giadrome_Icon.png" alt="MHFU-Giadrome_Icon"><p>Giadrome</p></a><hr>
             <a href="../paginas_monstros/gypceros.html" target="_blank"><img src="../imagens/Gypceros_Icon.png" alt="Gypceros_Icon"><p>Gypceros</p></a><hr>
-            <img src="../imagens/Iodrome_Icon.png" alt="Iodrome_Icon"><p>Iodrome</p><hr>
+            <a href="../paginas_monstros/iodrome.html" target="_blank"><img src="../imagens/Iodrome_Icon.png" alt="Iodrome_Icon"><p>Iodrome</p></a><hr>
             <img src="../imagens/Shakalaka_Icon.png" alt="Shakalaka_Icon"><p>King Shakalaka</p><hr>
             <a href="../ex001/index.html" target="_blank"><img src="../imagens/Tigrex_Icon.png" alt="Tigrex_Icon"><p>Tigrex</p></a><hr>
             <img src="../imagens/Velocidrome_Icon.png" alt="Velocidrome_Icon"><p>Velocidrome</p><hr>
