--- a/ex001/mapas.html
+++ b/ex001/mapas.html
@@ -30,7 +30,7 @@
                     </span>
                   </a>
                 </li>
-                <li class="menu-item"><a href="#" target="_blank" rel="author">
+                <li class="menu-item"><a href="../ex001/monstros.html" target="_blank" rel="author">
                   <i class="fa-solid fa-book"></i>
                     <span class="item-descricao">
                       Monstros
